force-app/main/default/objects/Annual_Certification__c/Annual_Certification__c.object-meta.xml
<CustomObject>
    <description>Header object for certifications.</description>
    <label>Annual Certification</label>
    <nameField>
        <displayFormat>AC{00000000}</displayFormat>
        <label>Annual Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>