force-app/main/default/objects/Annual_Certification__c/fields/Completed_Certification_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Completed_Certification_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box when all certification requirements for volunteer are complete.</description>
    <inlineHelpText>Check box when all certification requirements for volunteer are complete.</inlineHelpText>
    <label>Completed Certification Requirements</label>
    <type>Checkbox</type>
</CustomField>