force-app/main/default/objects/Annual_Certification__c/fields/Date_Certification_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>Date_Certification_Requirements_Met__c</fullName>
    <description>Enter the date certification requirements are met.</description>
    <inlineHelpText>Enter the date certification requirements are met.</inlineHelpText>
    <label>Date Certification Requirements Met</label>
    <type>Date</type>
</CustomField>