force-app/main/default/objects/Annual_Certification__c/fields/Lockout__c.field-meta.xml
<CustomField>
    <fullName>Lockout__c</fullName>
    <description>Record is only editable by authorized users on or after this date. Please contact a staff person from your program for assistance.</description>
    <formula>DATE(VALUE(Tax_Year__c)+1,4,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record is only editable by authorized users on or after this date. Please contact a staff person from your program for assistance.</inlineHelpText>
    <label>Lockout Date</label>
    <type>Date</type>
</CustomField>