force-app/main/default/objects/Annual_Certification__c/fields/Program_Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Volunteer_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup relation to program volunteer object.</description>
    <inlineHelpText>Related program volunteer record ID.</inlineHelpText>
    <label>Program Volunteer ID</label>
    <referenceTo>Program_Volunteer__c</referenceTo>
    <relationshipName>Program_Volunteer_Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>