force-app/main/default/objects/Annual_Certification__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <description>Volunteer associated with this program certification.</description>
    <formula>Program_Volunteer_ID__r.Volunteer__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Volunteer associated with this program certification.</inlineHelpText>
    <label>Volunteer</label>
    <type>Text</type>
</CustomField>