force-app/main/default/objects/Annual_Certification__c/validationRules/Date_Certification_Rqts_Met_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Certification_Rqts_Met_is_Required</fullName>
    <active>true</active>
    <description>Date Certification Requirements Met is required if Certification Requirements Met = TRUE, and must be NULL if Certification Requirements Met = FALSE.</description>
    <errorConditionFormula>OR(
AND(
Completed_Certification_Requirements__c = TRUE,
ISNULL(Date_Certification_Requirements_Met__c)
),
AND(
Completed_Certification_Requirements__c = FALSE,
NOT(ISNULL(Date_Certification_Requirements_Met__c))
)
)</errorConditionFormula>
    <errorDisplayField>Completed_Certification_Requirements__c</errorDisplayField>
    <errorMessage>Both the Completed Certification Requirements check box and the Date Certification Requirements Met field must be populated before clicking the Update Certifications button.</errorMessage>
</ValidationRule>