force-app/main/default/objects/Annual_Certification__c/validationRules/Date_Format_Must_be_Four_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Format_Must_be_Four_Numbers</fullName>
    <active>true</active>
    <description>Date field must have 4 numeric characters.</description>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK( Tax_Year__c )),
NOT(ISNUMBER(Tax_Year__c))), 
LEN(Tax_Year__c ) &lt; 4,
BEGINS(Tax_Year__c, &quot;0&quot;)  
)</errorConditionFormula>
    <errorDisplayField>Tax_Year__c</errorDisplayField>
    <errorMessage>Tax year must be 4 numbers and cannot begin with a zero.</errorMessage>
</ValidationRule>