force-app/main/default/objects/Annual_Certification__c/validationRules/Volunteers_Cannot_Modify_Lockout_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Volunteers_Cannot_Modify_Lockout_Date</fullName>
    <active>true</active>
    <description>Only staff and system administrators can modify lockout date.</description>
    <errorConditionFormula>AND( 
ISCHANGED( Lockout__c ), 
NOT(CONTAINS($Profile.Name, &quot;System Administrator&quot;)), 
NOT(CONTAINS($Profile.Name, &quot;System Integrator&quot;)) 
)</errorConditionFormula>
    <errorMessage>Only authorized users can modify the lockout date.  Please contact a staff person to assist you.</errorMessage>
</ValidationRule>